// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Axentix/Components/Button Circle 1`] = `
<button
  class="btn btn-circle primary rounded-1"
  classes="primary rounded-1"
  content="I"
>
  <span>
    I
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Disabled 1`] = `
<button
  class="btn btn-disabled primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Large 1`] = `
<button
  class="btn btn-large primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Normal 1`] = `
<button
  class="btn primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline 1`] = `
<button
  class="btn btn-outline txt-airforce rounded-1"
  classes="txt-airforce rounded-1"
  content="Button"
>
  <span
    class="btn-outline-text"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline Invert 1`] = `
<button
  class="btn btn-outline txt-blue txt-light-3 rounded-1"
  classes="txt-blue txt-light-3 rounded-1"
  content="Button"
>
  <span
    class="btn-outline-text btn-outline-invert"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline Opening 1`] = `
<button
  class="btn btn-outline btn-opening txt-airforce rounded-1"
  classes="txt-airforce rounded-1"
  content="Button"
>
  <span
    class="btn-outline-text"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Press 1`] = `
<button
  class="btn btn-press primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Small 1`] = `
<button
  class="btn btn-small primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Large 1`] = `
<div
  class="btn-group btn-group-large"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Normal 1`] = `
<div
  class="btn-group"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Rounded 1`] = `
<div
  class="btn-group rounded-1"
  classes="rounded-1"
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Small 1`] = `
<div
  class="btn-group btn-group-small"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical 1`] = `
<div
  class="btn-group btn-group-vertical"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical Large 1`] = `
<div
  class="btn-group btn-group-vertical btn-group-large"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical Rounded 1`] = `
<div
  class="btn-group btn-group-vertical rounded-1"
  classes="rounded-1"
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/ButtonGroup Vertical Small 1`] = `
<div
  class="btn-group btn-group-vertical btn-group-small"
  classes=""
>
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
   
  <button
    class="btn airforce dark-2"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Axentix/Components/Collapsible Auto Close 1`] = `
<div
  class="sidenav shadow-1 sidenav-fixed"
  style="transition-duration: 300ms;"
>
  <!---->
   
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link"
  >
    Collapse
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
   
  <a
    class="sidenav-link"
  >
    Collapse 2
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Collapsible In Sidenav 1`] = `
<div
  class="sidenav shadow-1 sidenav-fixed"
  style="transition-duration: 300ms;"
>
  <!---->
   
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link"
  >
    Collapse
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
   
  <a
    class="sidenav-link"
  >
    Collapse 2
  </a>
   
  <div
    class="collapsible"
    content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
    style="transition-duration: 300ms; overflow: visible;"
  >
    <a
      class="sidenav-link"
    >
      Collapsed 1
    </a>
     
    <a
      class="sidenav-link"
    >
      Collapsed 2
    </a>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Collapsible Normal 1`] = `
<div
  class="collapsible"
  content="<div class=\\"blue p-3\\">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.</div>"
  style="transition-duration: 300ms; overflow: visible;"
>
  <span>
    <div
      class="blue p-3"
    >
      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
      Error, soluta asperiores nobis, iusto tenetur illum sunt modi quisquam
      blanditiis aspernatur sequi minus corporis quibusdam quam voluptatem!
      Cumque nemo debitis porro.
    </div>
  </span>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Constrained 1`] = `
<div
  class="dropdown anim-none"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content dropdown-constrain-width"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Fade 1`] = `
<div
  class="dropdown anim-fade"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
  style="transition-duration: 300ms;"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Hover 1`] = `
<div
  class="dropdown anim-none"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Dropdown Normal 1`] = `
<div
  class="dropdown anim-none"
  content="<div class=\\"dropdown-item\\">Hello</div>
      <div class=\\"dropdown-item\\">Hello number 2</div>"
>
  <button
    class="btn btn blue"
  >
    Trigger dropdown
  </button>
   
  <div
    class="dropdown-content"
    style="max-height: auto;"
  >
     
    <span
      class="white"
    >
      <div
        class="dropdown-item"
      >
        Hello
      </div>
      
      
      <div
        class="dropdown-item"
      >
        Hello number 2
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Chips 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Chips Closable 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Multiple 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Normal 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose an option
    </label>
     
    <!---->
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Autocomplete Single Line 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select single-line"
      >
         
        <input
          class="form-autocomplete-input"
          type="text"
        />
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Checkbox 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="checkbox"
      />
       
      <span
        class=""
      >
        <span>
          Ok
        </span>
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Full Material Radio 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class="full"
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class="full"
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class="full"
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Material Checkbox 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="checkbox"
      />
       
      <span
        class=""
      >
        <span>
          Ok
        </span>
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Material Radio 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class=""
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class=""
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
      />
       
      <span
        class=""
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Radio 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
      />
       
      <span
        class=""
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
      />
       
      <span
        class=""
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
      />
       
      <span
        class=""
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/File Multiple 1`] = `
<form
  class=""
>
  <div
    class="form-file"
  >
    <label
      class="btn airforce dark-1 rounded-1 shadow-1"
      for="input"
    >
      Upload
    </label>
     
    <input
      classes=""
      id="input"
      multiple="multiple"
      type="file"
    />
     
    <div
      class="form-file-path"
    />
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/File Normal 1`] = `
<form
  class=""
>
  <div
    class="form-file"
  >
    <label
      class="btn airforce dark-1 rounded-1 shadow-1"
      for="input"
    >
      Upload
    </label>
     
    <input
      classes=""
      id="input"
      type="file"
    />
     
    <div
      class="form-file-path"
    />
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Both 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group rounded-1"
      classes="rounded-1"
    >
      <span
        class="form-group-text bd-1 bd-solid bd-r-0 bd-grey bd-light-1"
      >
        @
      </span>
       
      <input
        class="form-control"
        type="text"
      />
       
      <span
        class="form-group-text bd-1 bd-solid bd-l-0 bd-grey bd-light-1 grey light-3"
      >
        useaxentix.com
      </span>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Prefix 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group"
      classes=""
    >
      <span
        class="form-group-text"
      >
        @
      </span>
       
      <input
        class="form-control"
        type="text"
      />
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Suffix 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group"
      classes=""
    >
      <input
        class="form-control"
        type="text"
      />
       
      <span
        class="form-group-text"
      >
        @
      </span>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Basic 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Basic Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Disabled 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    disabled="disabled"
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      disabled="disabled"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Disabled Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    disabled="disabled"
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      disabled="disabled"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Helper 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <span
      class="form-helper"
    >
      This is a helper text.
    </span>
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Helper Custom 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <span
      class="form-helper text-red text-center"
    >
      Error message.
    </span>
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Inline 1`] = `
<form
  class=""
>
  <div
    class="form-field form-inline"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Multiple Select 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    multiple="multiple"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
      multiple="multiple"
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Placeholder 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder="Axentix <3"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder="Axentix <3"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Placeholder Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder="Axentix <3"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder="Axentix <3"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Readonly 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    readonly="readonly"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      readonly="readonly"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Readonly Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    readonly="readonly"
    style="--ax-form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      readonly="readonly"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Select 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Select Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Textarea 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="textarea"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <textarea
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Textarea Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--ax-form-material-color: #4c9f85;"
    tag="textarea"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <textarea
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Chips 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Chips Closable 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Multiple 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <!---->
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Normal 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose an option
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select"
      >
        
      
    
      </div>
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Select Single Line 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--ax-form-material-color: #4c9f85;"
  >
    <label>
      Choose options
    </label>
     
    <div
      class=""
      classes=""
      multipleselectedvalue=""
    >
      <div
        class="form-control custom-select single-line"
      />
       
      <div
        class="form-select-content"
        style="opacity: 0;"
      >
          
      </div>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Custom Color 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider"
        style="--ax-form-switch-active-color: #000000;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Large 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider form-slider-large"
        style="--ax-form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Normal 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider"
        style="--ax-form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Small 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--ax-form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="form-slider form-slider-small"
        style="--ax-form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Modal Bouncing 1`] = `
<div
  class="modal modal-bouncing white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Falling 1`] = `
<div
  class="modal modal-falling white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Footer 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer="Footer content"
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <div
    class="modal-footer"
  >
    <span>
      Footer content
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Modal Header 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header="Header title"
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <div
    class="modal-header"
  >
    <span>
      Header title
    </span>
  </div>
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Normal 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Pagination Custom Arrows 1`] = `
<ul
  class="pagination"
>
  <li
    class="txt-blue arrow pb-1 disabled"
  >
    <a>
      ←
    </a>
  </li>
   
  <li
    class="txt-blue disabled"
  >
    <a>
      prev
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="txt-blue"
  >
    <a>
      next
    </a>
  </li>
   
  <li
    class="arrow txt-blue pb-1"
  >
    <a>
      →
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Custom Items 1`] = `
<ul
  class="pagination"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
         1 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         2 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         3 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         4 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         5 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         6 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         10 
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Large 1`] = `
<ul
  class="pagination pagination-large"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Max Visible 1`] = `
<ul
  class="pagination"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Normal 1`] = `
<ul
  class="pagination"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Small 1`] = `
<ul
  class="pagination pagination-small"
>
  <li
    class="arrow disabled"
  >
    <a>
      «
    </a>
  </li>
   
  <li
    class="arrow disabled"
  >
    <a>
      ‹
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
        1
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        2
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        3
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        4
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        5
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        6
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class=""
    >
      <a>
        10
      </a>
    </li>
  </div>
   
  <li
    class="arrow"
  >
    <a>
      ›
    </a>
  </li>
   
  <li
    class="arrow"
  >
    <a>
      »
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Pagination Totally Custom 1`] = `
<ul
  class="pagination"
>
  <li
    class="txt-blue arrow pb-1 grey light-4 bd-solid bd-1 bd-grey bd-light-3 disabled"
  >
    <a>
      ←
    </a>
  </li>
   
  <li
    class="txt-blue grey light-4 bd-solid bd-1 bd-grey bd-light-3 disabled"
  >
    <a>
      prev
    </a>
  </li>
   
  <div
    class="flex"
  >
    <li
      class="active"
    >
      <a>
         1 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         2 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         3 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         4 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         5 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         6 
      </a>
    </li>
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <!---->
  </div>
  <div
    class="flex"
  >
    <li
      class="dots"
    >
      ...
    </li>
  </div>
  <div
    class="flex"
  >
    <li
      class="grey light-4 bd-solid bd-1 bd-grey bd-light-3"
    >
      <a>
         10 
      </a>
    </li>
  </div>
   
  <li
    class="txt-blue grey light-4 bd-solid bd-1 bd-grey bd-light-3"
  >
    <a>
      next
    </a>
  </li>
   
  <li
    class="arrow txt-blue pb-1 grey light-4 bd-solid bd-1 bd-grey bd-light-3"
  >
    <a>
      →
    </a>
  </li>
</ul>
`;

exports[`Storyshots Axentix/Components/Sidenav Large 1`] = `
<div
  class="sidenav large airforce shadow-1"
  classes="airforce shadow-1"
  footer=""
  header=""
  style="transition-duration: 300ms;"
>
  <!---->
    
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Normal 1`] = `
<div
  class="sidenav airforce shadow-1"
  classes="airforce shadow-1"
  footer=""
  header=""
  style="transition-duration: 300ms;"
>
  <!---->
    
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Right Aligned 1`] = `
<div
  class="sidenav right-aligned airforce shadow-1"
  classes="airforce shadow-1"
  footer=""
  header=""
  style="transition-duration: 300ms;"
>
  <!---->
    
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Tab Arrow 1`] = `
<div
  class="tab shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <div
    class="tab-arrow"
  >
    <div
      class="tab-prev shadow-1"
    >
       ‹ 
    </div>
     
    <ul
      class="tab-menu"
      style="--tab-bar-left-offset: 0; --tab-bar-right-offset: 0;"
    >
      <li
        class="tab-link"
      >
        <a
          href="#tab1"
        >
          Tab 1
        </a>
      </li>
       
      <li
        class="tab-link"
      >
        <a
          href="#tab2"
        >
          Tab 2
        </a>
      </li>
       
      <li
        class="tab-link"
      >
        <a
          href="#tab3"
        >
          Long tab content long tab content 
        </a>
      </li>
    </ul>
     
    <div
      class="tab-next shadow-1"
    >
       › 
    </div>
  </div>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Full Width 1`] = `
<div
  class="tab tab-full-width shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <ul
    class="tab-menu"
    style="--tab-bar-left-offset: 0; --tab-bar-right-offset: 0;"
  >
    <li
      class="tab-link"
    >
      <a
        href="#tab1"
      >
        Tab 1
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab2"
      >
        Tab 2
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab3"
      >
        Long tab content long tab content 
      </a>
    </li>
  </ul>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Normal 1`] = `
<div
  class="tab shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <ul
    class="tab-menu"
    style="--tab-bar-left-offset: 0; --tab-bar-right-offset: 0;"
  >
    <li
      class="tab-link"
    >
      <a
        href="#tab1"
      >
        Tab 1
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab2"
      >
        Tab 2
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab3"
      >
        Long tab content long tab content 
      </a>
    </li>
  </ul>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tab Without Active Bar 1`] = `
<div
  class="tab shadow-1"
  classes="shadow-1"
  style="transition-duration: 300ms;"
>
  <ul
    class="tab-menu"
    style="--tab-bar-left-offset: 0; --tab-bar-right-offset: 0;"
  >
    <li
      class="tab-link"
    >
      <a
        href="#tab1"
      >
        Tab 1
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab2"
      >
        Tab 2
      </a>
    </li>
     
    <li
      class="tab-link"
    >
      <a
        href="#tab3"
      >
        Long tab content long tab content 
      </a>
    </li>
  </ul>
    
  <div
    style="display: none;"
  >
     Content 1 
  </div>
   
  <div
    style="display: none;"
  >
     Content 2 
  </div>
   
  <div
    style="display: none;"
  >
     This is the 3rd content 
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Bottom 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Left 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Right 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Top 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;
